Adding transitions and scale

--- a/index.html
+++ b/index.html
@@ -97,21 +97,21 @@
     <h2>What's on the Menu</h2>
     <div class="container" id="menu-container">
       <div class="row">
-        <div class="col-md-3" id="cookies">
+        <a href="https://www.google.com/" class="col-md-3" id="cookies">
           <h3>Cookies</h3>
           <p>Fresh cookies made with love for you to enjoy with every bite.</p>
-        </div>
-        <div class="col-md-3" id="cakes">
+        </a>
+        <a href="https://www.google.com/" class="col-md-3" id="cakes">
           <h3>Cakes</h3>
           <p>
             Decadent cakes made custom for special occasions. Slices and whole
             cakes offered in store.
           </p>
-        </div>
-        <div class="col-md-3" id="other">
+        </a>
+        <a href="https://www.google.com/" class="col-md-3" id="other">
           <h3>Other Treats</h3>
           <p>Lots of Other Treats listed on our menu!</p>
-        </div>
+        </a>
       </div>
     </div>
     <footer>
